# dlr

./: .gitignore  README.md  meson.build
data/: aircheck-favorites.gschema.xml  com.github.keyndin.dlr.appdata.xml  com.github.keyndin.dlr.desktop  com.github.keyndin.dlr.main.ui  com.github.keyndin.dlr.main.ui.css  gschema.xml  gschemas.compiled  meson.build
src/: A_Station.vala  Application.vala  Broadcast.vala  DLF.vala  Deserializable.vala  E_StationNames.vala  Kultur.vala  MainWindow.vala  MediaKeys.vala  Nova.vala  Podcast.vala  Station.vala  StreamPlayer.vala  com.github.keyndin.dlr.gresource.xml  main.vala  meson.build  window.ui  window.ui.css
src/digests/: Preview.vala
src/player/: GnomeMediaKeys.vala  MediaKeys.vala  SoundIndicator.vala  SoundIndicatorPlayer.vala  SoundIndicatorRoot.vala  StreamPlayer.vala
src/stations/: DLF.vala  E_StationNames.vala  EpisodeQuery.vala
src/stations/digests/: Broadcast.vala  BroadcastJsonParser.vala  BroadcastParser.vala  Episode.vala  EpisodeJsonParser.vala  EpisodeParser.vala  LiveRadioInfo.vala  LiveRadioInfoJsonParser.vala  Podcast.vala  Preview.vala
src/stations/playable/: A_Station.vala  I_Playable.vala
src/tests/: unit_test  unit_test.vala
src/ui/: #window.ui#  MainWindow.vala  gresource.xml  window.ui  window.ui.css
src/ui/views/: EpisodesTreeView.vala  I_TreeView.vala
src/utils/: A_JsonParser.vala  AircheckJsonParser.vala  Deserializable.vala  SchemaIO.vala
