# project name and programming language
project('com.github.keyndin.dlr', 'vala', 'c')

gnome = import('gnome')


dlr_dependencies = [
   dependency('gtk+-3.0'),
   dependency('gstreamer-1.0'),
   dependency('libxml-2.0'),
   dependency('libsoup-2.4'),
   dependency('gio-2.0')
]

subdir('data')
subdir('src')